# dotfiles

./: .gtkrc-2.0  .i3blocks.conf  .i3status.conf  README.md  install.sh  left.sh  tmp.sh
config/: .compton.conf.swp  compton.conf  picom.conf
config/gtk-3.0/: settings.ini
config/i3/: config  ext_mon.sh  i3lock.sh  is_muted.sh  nmcli.sh  rofi.sh  startup_script.sh  test.sh  vpn.sh  wallpapers.sh
config/i3blocks/: battery.sh  volume.sh  vpn.sh  wifi.sh
config/kitty/: kitty.conf
config/my_status_bar/: Cargo.toml
config/my_status_bar/src/: main.rs
config/termite/: config
