[package]
name = "my_status_bar"
version = "0.1.0"
authors = ["Egor Sysoykin <egor.sysoykin@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network-manager = "0.11.0"
chrono = "0.4"
battery = "0.7.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
